--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 
 .App-header {
-  background-color: #282c34;
+  background-color: #050b16;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
